--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,12 @@
 <resources>
     <string name="app_name">Ribbot</string>
 
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Inbox</string>
+    <string name="title_section2">Friends</string>
 
     <string name="hello_world">Hello world!</string>
-
     <string name="action_settings">Settings</string>
+    <string name="menu_logout_label">Logout</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="username_hint">Username</string>
     <string name="password_hint">Password</string>
@@ -16,4 +15,10 @@
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="email_hint">Email</string>
     <string name="sign_up_button_label">Sign Up</string>
+    <string name="sign_up_error_message">Please enter username, password, and email.</string>
+    <string name="sign_up_error_title">Oops</string>
+    <string name="login_error_message">Please enter username, password, and email.</string>
+    <string name="login_error_title">Oops</string>
+    <string name="empty_inbox_label">No new messages!</string>
+    <string name="empty_friends_label">Add friends to begin!</string>
 </resources>
