--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,11 @@
     <string name="video_file_size_warning">The selected video must be less than 10 MB</string>
     <string name="error_opening_file">There was a problem with the selected file.</string>
     <string name="error_file_size_too_large">The selected file is too large.  Select a new file.</string>
+    <string name="menu_send_label">Send</string>
+    <string name="error_selectig_file">There was an error with the file selected.  Please select a different file</string>
+    <string name="error_selecting_file_title">We\'re Sorry!</string>
+    <string name="success_message">Message Sent!</string>
+    <string name="error_sending_message">There was an error sending you message. Please try again.</string>
 
     <string-array name="camera_choices">
         <item>Take Picture</item>
